--- a/de-cipher.ipynb
+++ b/de-cipher.ipynb
@@ -2,22 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spider-Man Into the Spider-Verse \n",
+      "Parasite \n",
+      "Mission Impossible Fallout \n",
+      "John Wick Chapter 3 - Parabellum \n",
+      "Captain america the first avenger \n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import re\n",
+    "with open('movielist.csv', 'r') as f:\n",
+    "  file = csv.reader(f)\n",
+    "  my_list = list(file)\n",
+    "#print(my_list)\n",
+    "l=len(my_list)\n",
+    "for i in range(1,l):\n",
+    "    movi=my_list[i][1]\n",
+    "    movi=movi.split(\".\")\n",
+    "    s=\"\"\n",
+    "    for i in movi:\n",
+    "        w=re.findall(\"[0-9]{4}\",i)\n",
+    "        #print(i)\n",
+    "        if w:\n",
+    "            break;\n",
+    "        s=s+i+\" \"\n",
+    "    print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "movi=\"Spider-Man.Into.the.Spider-Verse.2018.1080p.BRRip.x264-Spiderman\"\n",
-    "movi=movi.split(\".\")\n",
-    "import re\n",
-    "s=\"\"\n",
-    "for i in movi:\n",
-    "    w=re.findall(\"[0-9]{4}\",i)\n",
-    "    #print(i)\n",
-    "    if w:\n",
-    "        break;\n",
-    "    s=s+i+\" \"\n",
-    "print(s)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
